# NiuBlock

./: CMakeLists.txt  README.md
base/base/src/: CMakeLists.txt
base/base/test/: CMakeLists.txt  TestFs.cpp  TestThreadInterrupt.cpp  TestUtilStrEncodings.cpp  TestUtilTime.cpp
base/big_int/: build.sh  common.h  test.cpp  uint256.cpp
base/big_int/include/big_int/: uint256.h
base/big_int/src/: CMakeLists.txt  arith_uint256.cpp
base/big_int/test/: CMakeLists.txt  test.cpp
base/compat/include/compat/: endian.h
base/compat/src/: CMakeLists.txt  glibc_compat.cpp
base/crypto/src/: CMakeLists.txt  aes.cpp
base/support/src/: CMakeLists.txt
doc/: split_bitcoin_code_step.md
example/src/: CMakeLists.txt
example/test/: CMakeLists.txt  TestUniValue.cpp  TestVersion.cpp
